# Retrieval-based-Voice-Conversion

./: .gitignore  README.md  pyproject.toml
docs/es/: README.es.md
docs/jp/: README.ja.md
rvc/cli/: cli.py
rvc/cli/handler/: infer.py
rvc/cli/utils/: dlmodel.py  env.py  initialize.py
rvc/configs/: config.py
rvc/lib/: audio.py  rmvpe.py  slicer2.py
rvc/lib/infer_pack/: attentions.py  commons.py  models.py  models_onnx.py  modules.py  onnx_inference.py
rvc/lib/infer_pack/modules/F0Predictor/: DioF0Predictor.py  HarvestF0Predictor.py  PMF0Predictor.py
rvc/lib/ipex/: __init__.py  attention.py  gradscaler.py  hijacks.py
rvc/lib/jit/: __init__.py  get_hubert.py
rvc/lib/train/: data_utils.py  mel_processing.py  process_ckpt.py  utils.py
rvc/lib/train/architecture/: v1.yml  v2.yml
rvc/lib/uvr5_pack/: utils.py
rvc/lib/uvr5_pack/lib_v5/: spec_utils.py
rvc/modules/onnx/: export.py
rvc/modules/uvr5/: mdxnet.py  modules.py  vr.py
rvc/modules/vc/: modules.py  pipeline.py  utils.py
rvc/utils/api/: api.py
rvc/utils/api/endpoints/: inference.py
rvc/utils/cli/: cli.py
rvc/utils/cli/handler/: infer.py  uvr5.py
rvc/utils/cli/utils/: dlmodel.py  initialize.py
rvc/wrapper/api/: api.py
rvc/wrapper/api/endpoints/: inference.py  uvr.py
rvc/wrapper/cli/: cli.py
rvc/wrapper/cli/handler/: infer.py  train.py  uvr5.py
rvc/wrapper/cli/utils/: env.py
