[tool.poetry]
name = "rvc"
version = "0.2.0"
description = ""
authors = ["Ftps <ftpsflandre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
torch = "^2.1.0"
fairseq = {git = "https://github.com/Tps-F/fairseq.git", branch="main"}
soundfile = "^0.12.1"
librosa = "^0.10.1"
praat-parselmouth = "^0.4.3"
pyworld = "^0.3.4"
torchcrepe = "^0.0.22"
av = "^11.0.0"
faiss-cpu = "^1.7.4"
python-dotenv = "^1.0.0"
pydub = "^0.25.1"
click = "^8.1.7"
tensorboardx = "^2.6.2.2"

[tool.poetry.scripts]
rvc = "rvc.cli.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
